# SimpleGraphics

./: CMakeLists.txt  SimpleGraphics.cpp  readme.md  test.cpp
api/: CMakeLists.txt  Shape.h
simple_graph_api/: CMakeLists.txt  Canvas.cpp  Canvas.h  Shape.cpp
template_impl/: CMakeLists.txt  Canvas.cpp  Canvas.h  Shape.cpp  Shape.h
winapi_graph/: CMakeLists.txt  Canvas.cpp  Canvas.h  Shape.cpp  Shape.h
